# rust-music

./: .gitignore  README.MD
jack_client/: Cargo.toml
jack_client/.fleet/: run.json
jack_client/src/: controller.rs  jacker.rs  main.rs  osc.rs  phasor.rs  waveform.rs
little_wav/: Cargo.toml  README.MD
little_wav/src/: chunk.rs  codable.rs  four_cc.rs  header_data.rs  header_format.rs  header_riff.rs  lib.rs  wav.rs
playground/: Cargo.toml
playground/src/: main.rs
