[package]
name = "jack_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"float-cmp" = { version = "0.9.0" }
"jack" = { version = "0.11.1" }
"crossbeam-channel" = { version = "0.5.0" }
"little_wav" = { path = "../little_wav" }